fix always showing modal issue

--- a/frontend/shop/public/index.html
+++ b/frontend/shop/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
+
     <!-- Libs CSS -->
     <link
       href="%PUBLIC_URL%/assets/libs/slick-carousel/slick/slick.css"
@@ -73,7 +73,7 @@
     <script src="%PUBLIC_URL%/assets/libs/simplebar/dist/simplebar.min.js"></script>
 
     <!-- Theme JS -->
-    <script src="%PUBLIC_URL%/assets/js/theme.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
 
     <script src="%PUBLIC_URL%/assets/js/vendors/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/vendors/countdown.js"></script>
